# bhlib

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README
core/: CMakeLists.txt
core/include/bh/: algo.h  bh.h  ds.h
core/src/: algo.c  ds.c
docs/: Doxyfile
include/bh/: algo.h  bh.h  config.in  ds.h  thread.h
platform/unix/include/bh/: thread_base.h
platform/unix/src/: thread.c
platform/win32/include/bh/: thread_base.h
platform/win32/src/: thread.c
scripts/: trim-whitespace.sh
src/: algo.c  ds.c  thread.c  tpool.c
